# vault

./: .gitignore  README.md
cli/: Cargo.toml  file_to_encrypt.txt
cli/src/: main.rs
core/: Cargo.toml
core/src/: err.rs  keygen.rs  lib.rs
