[package]
name = "vault-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Benjamin Eder"]
description = "A cli tool for password based encryption/decryption"
repository = "https://github.com/bennyboer/vault"
keywords = ["encryption", "decryption", "password", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
vault-core = "0.1.0"
rpassword = "7.2.0"
zeroize = "1.5.7"
cmd-args = "0.2.0"

[[bin]]
name = "vault"
path = "src/main.rs"
