[package]
name = "vault-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Benjamin Eder"]
description = "Password based encryption/decryption"
repository = "https://github.com/bennyboer/vault"
keywords = ["encryption", "decryption", "password"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
argon2 = "0.4.1"
rand = "0.8.5"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chacha20 = "0.9.0"
zeroize = "1.5.7"
